syntax = "proto3";

package v1.services.pb;
option go_package = "v1/services;pb";

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}